--- a/pagina22.html
+++ b/pagina22.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <style>
+   
         body {
             font-family: Arial, sans-serif;
         }
@@ -23,7 +22,7 @@
             border: 1px solid #ccc;
             margin: 10px 0;
         }
-    </style>
+    
 <nav>
     <a href="#home">Diseño de soluciones innovadoras</a>
     <a href="#about">Construcción de proyectos tecnológicos</a>
@@ -383,7 +382,7 @@ Anabrp. (2017, 16 marzo). Presentación «El proyecto Tecnológico» [Diapositiv
 <p>
 <p>
 
-<marquee> HernándezㅤCarmonaㅤOsmarㅤYahirㅤㅤyㅤㅤHuertaㅤBaronaㅤSergioㅤㅤ-ㅤㅤ415 </marquee>
+<> HernándezㅤCarmonaㅤOsmarㅤYahirㅤㅤyㅤㅤHuertaㅤBaronaㅤSergioㅤㅤ-ㅤㅤ415 </>
 
 <p>
 </p>
